# SQL_Based_Project

./: README.md  ascending_order (1).txt  self_isolation_dates.py
Project_done/: ._ReadMe.txt  ._src  ._tests  ReadMe.txt  pyproject.toml  test_Parser_true.py  test_Sort_by_Birthdate_LastName.py  test_Sort_by_Gender_LastName.py  test_Sort_by_LastName.py  test_format_data.py  test_order_of_properties.py  test_parser_fasle.py
Project_done/src/: __init__.py
Project_done/src/helpers/: Check_all_validities.py  format_data.py  parse_file.py  parse_line.py
Project_done/src/helpers/sort/: sort.py
Rubik's cube AI based/: ._ReadMe.txt  ._Rubic .py  ReadMe.txt  Rubic .py
SQL/: ._Data Engineering 1.ipynb  test2.docx
SQL/.ipynb_checkpoints/: Data Engineering 1-checkpoint.ipynb
Stock market prediction_Ai/: ._Code Implementation.ipynb  ._ReadMe.docx  Code Implementation.ipynb  ReadMe.docx
Tik tok auto video downloader/: ._downloader.py  ._ttscraper_hashtag.py  downloader.py  ttscraper_hashtag.py
ToDo-APP/: Instruction.txt  todo.py
csvApp/: ._utilities.py  io_spreadsheet.py  main.py  readme.md  requirements.txt  sample.csv  utilities.py
word2vecPyTorch/: ReadMe.txt  dataprep.py  main.py  model.py  utilities.py  word2vec.py
word2vecPyTorch/data/: text888.txt
word2vecPyTorch/wordsim353/: ._set2.tab
