[tool.poetry]
name = "parse-and-sort"
version = "0.1.0"
description = ""
authors = ["akhil1213 <legitthug54@gmail.com>"]
readme = "README.md"
packages = [{include = "parse_and_sort"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
